# module_logger

./: .gitignore  CMakeLists.txt  README.md  build  conanfile.py  fmt_diff.txt  svc-log.cmake
src/: logger.mpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
